--- a/package.json
+++ b/package.json
@@ -1,10 +1,24 @@
 {
   "name": "webdev-awesome-project-server-node",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "server side of the awesome project based on express",
   "scripts": {
     "start": "node ./bin/www"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jamesgeziqian/webdev-awesome-project-server-node.git"
+  },
+  "keywords": [
+    "express",
+    "mongoose"
+  ],
+  "author": "Ziqian Ge",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jamesgeziqian/webdev-awesome-project-server-node/issues"
+  },
+  "homepage": "https://github.com/jamesgeziqian/webdev-awesome-project-server-node#readme",
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
