--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,13 @@ typings/
 
 # next.js build output
 .next
+
+# IDE
+.idea/
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
