--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.16.2",
     "http-errors": "~1.6.3",
     "mongoose": "^5.6.0",
     "morgan": "~1.9.1"
